cloudformation/main_app/security_groups.yaml
Parameters:
  MainVPC:
    Type: String

Resources:


  MyDatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Name: databasesecurity_group
      GroupDescription: Enable MySQL access
      VpcId: !Ref MainVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 10.0.0.0/16

      Tags:
        - Key: Name
          Value: !Ref BastionSecurityGroup

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access to ALB
      VpcId: !Ref MainVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: ALB Security Group for HTTP access

  # NUEVO: Security Group para permitir tráfico HTTP desde el ALB a las instancias EC2
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access from ALB to EC2 instances
      VpcId: !Ref MainVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      Tags:
        - Key: Name
          Value: Web Server Security Group for HTTP access from ALB


  PrivateInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for private instances
      VpcId: !Ref MainVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSecurityGroup  # Allowing SSH only from Bastion Hosts
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Private Instance Security Group

  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Bastion Hosts
      VpcId: !Ref MainVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0  # Allowing SSH from anywhere (you might want to restrict this to your IP)
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Bastion Host Security Group

Outputs:

  MyDatabaseSecurityGroup:
    Description: arn
    Value: !Ref MyDatabaseSecurityGroup

  PrivateInstanceSecurityGroup:
    Description: PrivateInstanceSecurityGroup arn
    Value: !Ref PrivateInstanceSecurityGroup

  WebServerSecurityGroup:
    Value: !Ref WebServerSecurityGroup

  BastionSecurityGroup:
    Value: !Ref BastionSecurityGroup

  ALBSecurityGroup:
    Value: !Ref ALBSecurityGroup
